changed admin password

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AdminCredentials": {
     "Email": "admin@gmail.com",
-    "Password": "TestPassword"
+    "Password": "Admin123!"
   },
   "Logging": {
     "LogLevel": {
